test/typecheck/pass/union_recf_ok.sail

union U = {
  Ctor : int -> U
}