test/typecheck/fail/duplicate_type_id2.sail
enum foo1 = Bar1

union foo1 = { Bar2 : unit }